Bug 455207 - Recorder "Clean up Recordings" button title doesn't make any sense
Summary: Recorder "Clean up Recordings" button title doesn't make any sense
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers/Recorder (other bugs)
Version First Reported In: 5.0.6
Platform: Other All
: NOR minor
Target Milestone: ---
Assignee: wolthera
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-13 10:01 UTC by Dmitrii Utkin
Modified: 2024-11-08 11:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitrii Utkin 2022-06-13 10:01:10 UTC
This change replaced custom buttons to dialog standard, but also the button caption got occasionally changed.

https://invent.kde.org/graphics/krita/-/commit/ab725611515257eb56b52a8dc1b200d38cda6588

Before change: "Clean Up"
After change: "Close without Saving"


Expected to be "Clean Up", because button's action is to remove selected directories to free space.
Comment 1 Halla Rempt 2022-06-14 06:51:12 UTC
Wolthera, can you take a look?
Comment 2 Dmitry Kazakov 2024-11-08 11:41:56 UTC
Git commit e1deda8a9d1017cafdff4aa832ff5d6357a99024 by Dmitry Kazakov.
Committed on 08/11/2024 at 11:41.
Pushed by dkazakov into branch 'master'.

[string freeze exception] Recover "Clean Up" button in the Recordings Manager

When the manager was refactored into supporting QDialogButtonBox, then clean-up
button was replaced with a "Discard" button. Even though it sounds sensible in
English, it has a different meaning in QDialogButtonBox and, therefore, in translations.

In translations, the button is usually translated as "Close without saving", which is
not what the button actually does in Krita.

M  +5    -3    plugins/dockers/recorder/recorder_snapshots_manager.cpp
M  +1    -0    plugins/dockers/recorder/recorder_snapshots_manager.h
M  +1    -1    plugins/dockers/recorder/recorder_snapshots_manager.ui

https://invent.kde.org/graphics/krita/-/commit/e1deda8a9d1017cafdff4aa832ff5d6357a99024
Comment 3 Dmitry Kazakov 2024-11-08 11:43:31 UTC
Git commit 337b9a77af66e536d11aadf2bbe3f734ec1a13d1 by Dmitry Kazakov.
Committed on 08/11/2024 at 11:43.
Pushed by dkazakov into branch 'krita/5.2'.

[string freeze exception] Recover "Clean Up" button in the Krita's Recordings Manager

When the manager was refactored into supporting QDialogButtonBox, then clean-up
button was replaced with a "Discard" button. Even though it sounds sensible in
English, it has a different meaning in QDialogButtonBox and, therefore, in translations.

In translations, the button is usually translated as "Close without saving", which is
not what the button actually does in Krita.
CC:kde-i18n-doc@kde.org
CC:kimageshop@kde.org

M  +5    -3    plugins/dockers/recorder/recorder_snapshots_manager.cpp
M  +1    -0    plugins/dockers/recorder/recorder_snapshots_manager.h
M  +1    -1    plugins/dockers/recorder/recorder_snapshots_manager.ui

https://invent.kde.org/graphics/krita/-/commit/337b9a77af66e536d11aadf2bbe3f734ec1a13d1